fix#2 input styling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ textarea,
 input[type='text'],
 input[type='button'],
 input[type='submit'] {
-  border-radius: 0;
+  -webkit-border-radius: 0px;
 }
